[gd_scene load_steps=27 format=3 uid="uid://dla6hghx5nurp"]

[ext_resource type="Script" path="res://scripts/node_3_dtest.gd" id="1_0sybt"]
[ext_resource type="Texture2D" uid="uid://c26sucxvjpp1r" path="res://assets/tx_perso.png" id="2_02hs2"]
[ext_resource type="Script" path="res://scripts/beat.gd" id="3_u8ybg"]
[ext_resource type="Script" path="res://addons/rhythm_notifier/rhythm_notifier.gd" id="4_6ahyy"]
[ext_resource type="AudioStream" uid="uid://u4qw55jd38xj" path="res://assets/audio/musiques/Don Omar - Danza Kuduro REMIX.mp3" id="5_7076j"]
[ext_resource type="AudioStream" uid="uid://c60g07hkagivh" path="res://assets/audio/musiques/electro-tribal-beat-179094.mp3" id="6_ewmxh"]
[ext_resource type="AudioStream" uid="uid://36geufm6piii" path="res://assets/audio/musiques/etienne/Basse Samba.wav" id="7_1gcpr"]
[ext_resource type="AudioStream" uid="uid://wr4i51ksikon" path="res://assets/audio/musiques/etienne/Bloc Tempo Bad.wav" id="8_noht7"]
[ext_resource type="AudioStream" uid="uid://b28j2ej6ydwlt" path="res://assets/audio/musiques/etienne/Bloc Tempo Good.wav" id="9_8e4ap"]
[ext_resource type="AudioStream" uid="uid://c6ymd1katbp0o" path="res://assets/audio/musiques/etienne/Cuica (lol).wav" id="10_05x4r"]
[ext_resource type="AudioStream" uid="uid://dabgfjejmg8ju" path="res://assets/audio/musiques/etienne/Guitare samba.wav" id="11_2k6fo"]
[ext_resource type="AudioStream" uid="uid://ct3n2k0wvevd1" path="res://assets/audio/musiques/etienne/Percussions.wav" id="12_eglaj"]
[ext_resource type="AudioStream" uid="uid://brtnnbop7ub0j" path="res://assets/audio/musiques/etienne/Piano Samba.wav" id="13_cf681"]
[ext_resource type="AudioStream" uid="uid://bq24noktsaky" path="res://assets/audio/musiques/etienne/Synth #1.wav" id="14_sxpin"]
[ext_resource type="AudioStream" uid="uid://bn7860b8scrd4" path="res://assets/audio/bruitage/BlocBad.wav" id="15_jsuxj"]
[ext_resource type="AudioStream" uid="uid://bmy7ls3lhbcx6" path="res://assets/audio/bruitage/BlocGood.wav" id="16_ko30s"]
[ext_resource type="Texture2D" uid="uid://cxfg4q843v2yh" path="res://assets/tx_table.png" id="17_bsopk"]
[ext_resource type="Texture2D" uid="uid://dfiprcefj545r" path="res://assets/tx_cartons.png" id="18_2kplr"]
[ext_resource type="Texture2D" uid="uid://bp03let0bv16y" path="res://assets/tx_meubletv.png" id="19_q5wht"]
[ext_resource type="Texture2D" uid="uid://cf1tyd51c5iki" path="res://assets/tx_sacspoubelles.png" id="20_ej1r7"]
[ext_resource type="Texture2D" uid="uid://burw7e21nr7yl" path="res://assets/tx_bouteilles.png" id="21_5ibvl"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_11rtn"]

[sub_resource type="Sky" id="Sky_6a2p7"]
sky_material = SubResource("ProceduralSkyMaterial_11rtn")

[sub_resource type="Environment" id="Environment_mq01q"]
background_mode = 2
sky = SubResource("Sky_6a2p7")
ambient_light_source = 1
reflected_light_source = 1

[sub_resource type="BoxMesh" id="BoxMesh_ceq4n"]

[sub_resource type="BoxMesh" id="BoxMesh_tg8jn"]

[node name="Node3D" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 0.654477, 0.756082, 0, -0.756082, 0.654477, 0, 0, 0)
script = ExtResource("1_0sybt")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_mq01q")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.933499, 0.0907503, -0.346906, 0, 0.967445, 0.253083, 0.35858, -0.236252, 0.903109, 0.0678132, 7.21485, 0)

[node name="Perso" type="Sprite3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.0999588, 0.0028707, 0, -0.0028707, 0.0999588, 2.82541, -3.21965, 3.56021)
shaded = true
texture_filter = 0
texture = ExtResource("2_02hs2")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.902247, -0.431219, 0, 0.431219, 0.902247, 2.46069, -3.43022, 5.2058)
fov = 60.1

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 7.76112, 0.315297, 0, -6.30595, 0.388056, 1, 0.13, 0)
mesh = SubResource("BoxMesh_ceq4n")

[node name="Start" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(0.499999, -1.38478e-05, 0.000124609, 0.000692374, 0.00999999, 6.45602e-05, -0.000124698, -1.2964e-06, 0.5, 0, 0.5, 1.63913e-07)
mesh = SubResource("BoxMesh_tg8jn")

[node name="End" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(0.249999, -7.06254e-06, 0.000124608, 0.000353103, 9.99902e-05, 3.30121e-05, -0.000124699, -6.59376e-07, 0.25, -6.91414e-06, -0.508608, 0.764509)
mesh = SubResource("BoxMesh_tg8jn")
skeleton = NodePath("../Start")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 7.76112, 0.315297, 0, -6.30595, 0.388056, 2, 0.13, 0)
mesh = SubResource("BoxMesh_ceq4n")

[node name="Start" type="MeshInstance3D" parent="MeshInstance3D2"]
transform = Transform3D(0.499999, -1.38478e-05, 0.000124609, 0.000692374, 0.00999999, 6.45602e-05, -0.000124698, -1.2964e-06, 0.5, 0, 0.5, 1.63913e-07)
mesh = SubResource("BoxMesh_tg8jn")

[node name="End" type="MeshInstance3D" parent="MeshInstance3D2"]
transform = Transform3D(0.249999, -7.06254e-06, 0.000124608, 0.000353103, 9.99902e-05, 3.30121e-05, -0.000124699, -6.59376e-07, 0.25, -6.91414e-06, -0.508608, 0.764509)
mesh = SubResource("BoxMesh_tg8jn")
skeleton = NodePath("../Start")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 7.76112, 0.315297, 0, -6.30595, 0.388056, 3, 0.13, 0)
mesh = SubResource("BoxMesh_ceq4n")

[node name="Start" type="MeshInstance3D" parent="MeshInstance3D3"]
transform = Transform3D(0.499999, -1.38478e-05, 0.000124609, 0.000692374, 0.00999999, 6.45602e-05, -0.000124698, -1.2964e-06, 0.5, 0, 0.5, 1.63913e-07)
mesh = SubResource("BoxMesh_tg8jn")

[node name="End" type="MeshInstance3D" parent="MeshInstance3D3"]
transform = Transform3D(0.249999, -7.06254e-06, 0.000124608, 0.000353103, 9.99902e-05, 3.30121e-05, -0.000124699, -6.59376e-07, 0.25, -6.91414e-06, -0.508608, 0.764509)
mesh = SubResource("BoxMesh_tg8jn")
skeleton = NodePath("../Start")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 7.76112, 0.315297, 0, -6.30595, 0.388056, 4, 0.13, 0)
mesh = SubResource("BoxMesh_ceq4n")

[node name="Start" type="MeshInstance3D" parent="MeshInstance3D4"]
transform = Transform3D(0.499999, -1.38478e-05, 0.000124609, 0.000692374, 0.00999999, 6.45602e-05, -0.000124698, -1.2964e-06, 0.5, 0, 0.5, 1.63913e-07)
mesh = SubResource("BoxMesh_tg8jn")

[node name="End" type="MeshInstance3D" parent="MeshInstance3D4"]
transform = Transform3D(0.249999, -7.06254e-06, 0.000124608, 0.000353103, 9.99902e-05, 3.30121e-05, -0.000124699, -6.59376e-07, 0.25, -6.91414e-06, -0.508608, 0.764509)
mesh = SubResource("BoxMesh_tg8jn")
skeleton = NodePath("../Start")

[node name="Beatmarker" type="Node" parent="."]
script = ExtResource("3_u8ybg")

[node name="RhythmNotifier" type="Node" parent="." node_paths=PackedStringArray("audio_stream_player")]
script = ExtResource("4_6ahyy")
bpm = 120.0
beat_length = 0.5
audio_stream_player = NodePath("../music")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_7076j")

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ewmxh")

[node name="Audio" type="Node" parent="."]

[node name="Samba" type="Node" parent="Audio"]

[node name="BasseSamba" type="AudioStreamPlayer" parent="Audio/Samba"]
stream = ExtResource("7_1gcpr")
bus = &"MusiqueEtienne1"

[node name="BlocTempoBad" type="AudioStreamPlayer" parent="Audio/Samba"]
stream = ExtResource("8_noht7")
bus = &"BlocTempoBad"

[node name="BlocTempoGood" type="AudioStreamPlayer" parent="Audio/Samba"]
stream = ExtResource("9_8e4ap")
bus = &"BlocTempoGood"

[node name="Cuica(lol)" type="AudioStreamPlayer" parent="Audio/Samba"]
stream = ExtResource("10_05x4r")
bus = &"Cuica"

[node name="GuitareSamba" type="AudioStreamPlayer" parent="Audio/Samba"]
stream = ExtResource("11_2k6fo")
bus = &"GuitareSamba"

[node name="Percussions" type="AudioStreamPlayer" parent="Audio/Samba"]
stream = ExtResource("12_eglaj")
bus = &"MusiqueEtienne1"

[node name="PianoSamba" type="AudioStreamPlayer" parent="Audio/Samba"]
stream = ExtResource("13_cf681")
bus = &"PianoSamba"

[node name="Synth#1" type="AudioStreamPlayer" parent="Audio/Samba"]
stream = ExtResource("14_sxpin")
bus = &"Synth"

[node name="Bruitages" type="Node" parent="Audio"]

[node name="BlocBad" type="AudioStreamPlayer" parent="Audio/Bruitages"]
stream = ExtResource("15_jsuxj")

[node name="BlocGood" type="AudioStreamPlayer" parent="Audio/Bruitages"]
stream = ExtResource("16_ko30s")

[node name="table" type="Sprite3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.0804044, -0.059457, 0, 0.059457, 0.0804044, 2.00588, -2.45502, 2.71101)
texture = ExtResource("17_bsopk")

[node name="cartons" type="Sprite3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.0951632, -0.030724, 0, 0.030724, 0.0951632, 2.95476, -1.90776, 2.24811)
texture = ExtResource("18_2kplr")

[node name="meubletv" type="Sprite3D" parent="."]
transform = Transform3D(0.0997462, 0.00347952, 0.00621275, -0.000514699, 0.0905432, -0.0424461, -0.00710214, 0.0423064, 0.0903312, 3.17882, -0.165431, 1.12293)
texture = ExtResource("19_q5wht")

[node name="sac_poubelle" type="Sprite3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 3.8359, -1.93187, 2.29467)
texture = ExtResource("20_ej1r7")

[node name="bouteilles" type="Sprite3D" parent="."]
transform = Transform3D(0.15, 0, 0, 0, 0.119828, -0.0902283, 0, 0.0902283, 0.119828, 1.11633, -2.46019, 2.81173)
texture = ExtResource("21_5ibvl")
